--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
+  <title>Course4 Module 4 Solution</title>
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Course4 Module 4 Solution</h1>
+  <p>by Stefan van Roosmalen</p>
 </body>
 </html>
